modify button design

--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -191,7 +191,7 @@ input[type="button"] {
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
-  border: 1px solid #333;
+  border: 2px solid #bbb;
   cursor: pointer;
   box-sizing: border-box;
   font-size: 1.3rem;
@@ -211,6 +211,14 @@ input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
   outline: 0;
+}
+.btn:active,
+button:active,
+input[type="submit"]:active,
+input[type="reset"]:active,
+input[type="button"]:active {
+  top: 3px !important;
+  background-color: #e5e5e5;
 }
 
 .btn-xl {
