--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -145,7 +145,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
-  font-weight: 300; }
+  font-weight: 500; }
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
@@ -616,7 +616,7 @@ label > .label-body {
           height: 8px;
           margin-top: -4px;
 
-          background: #E71063;
+          background: #EB7413;
           border-radius: 8px;
       }
       .q-formbox input[type=checkbox]:checked + label::after {
@@ -626,8 +626,8 @@ label > .label-body {
           height: 8px;
           margin-top: -8px;
 
-          border-left: 3px solid #E71063;
-          border-bottom: 3px solid #E71063;
+          border-left: 3px solid #EB7413;
+          border-bottom: 3px solid #EB7413;
 
           -webkit-transform: rotate(-45deg);
           -ms-transform: rotate(-45deg);
