--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -211,7 +211,7 @@ input[type="button"] {
   font-size: 1.3rem;
   line-height: 2.6rem;
   letter-spacing: .39rem;
-  padding: .78rem 3.9rem;
+  padding: 1.105rem 3.9rem .52rem 3.9rem;
   border-radius: .52rem;
 }
 .btn:hover,
@@ -239,7 +239,7 @@ input[type="button"]:active {
 font-size: 2.0rem;
 line-height: 4rem;
 letter-spacing: .6rem;
-padding: 1.2rem 6rem;
+padding: 1.7rem 6rem .8rem 6rem;
 border-radius: .8rem;
 }
 
@@ -247,7 +247,7 @@ border-radius: .8rem;
 font-size: 1.6rem;
 line-height: 3.2rem;
 letter-spacing: .48rem;
-padding: .96rem 4.8rem;
+padding: 1.44rem 4.8rem .64rem 4.8rem;
 border-radius: .64rem;
 }
 
@@ -255,7 +255,7 @@ border-radius: .64rem;
 font-size: 1.3rem;
 line-height: 2.6rem;
 letter-spacing: .39rem;
-padding: .78rem 3.9rem;
+padding: 1.105rem 3.9rem .52rem 3.9rem;
 border-radius: .52rem;
 }
 
@@ -263,7 +263,7 @@ border-radius: .52rem;
 font-size: 1.0rem;
 line-height: 2rem;
 letter-spacing: .3rem;
-padding: .6rem 3rem;
+padding: .85rem 3rem .4rem 3rem;
 border-radius: .4rem;
 }
 
@@ -271,7 +271,7 @@ border-radius: .4rem;
 font-size: .8rem;
 line-height: 1.6rem;
 letter-spacing: .24rem;
-padding: .48rem 2.4rem;
+padding: .68rem 2.4rem .32rem 2.4rem;
 border-radius: .32rem;
 }
 
