--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -27,6 +27,7 @@
 + Visiblity
 + Push Menu
 + Clean Search
++ Aligner
 */
 
 
@@ -1191,4 +1192,40 @@ input.clean-search-input::-moz-placeholder {
 }
 .checkbox_1 {
   color: red;
+}
+
+/* Aligner
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.aligner {
+  width: 100%;
+  position: relative;
+}
+
+.aligner .center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  -moz-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  -o-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+}
+
+.aligner .right {
+  position: absolute;
+  right: 0;
+}
+.aligner .left {
+  position: absolute;
+  left: 0;
+}
+.aligner .top {
+  position: absolute;
+  top: 0;
+}
+.aligner .bottom {
+  position: absolute;
+  bottom: 0;
 }
