--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -64,14 +64,14 @@
 /* For devices larger than 400px */
 @media (min-width: 400px) {
   .container {
-    width: 85%;
+    width: 95%;
     padding: 20px; }
 }
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .container {
-    width: 80%; }
+    width: 90%; }
   .column,
   .columns {
     margin-left: 4%; }
@@ -146,6 +146,7 @@ body {
   font-weight: 400;
   font-family: "Poppins", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222;
+  background-color: #f5f5f5;
 }
 
 
@@ -1127,6 +1128,7 @@ nav ul{
   display: flex;
   width: 100%;
   height: 60px;
+  background-color: #fff;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -1238,5 +1240,5 @@ input.clean-search-input::-moz-placeholder {
 }
 
 
-/* Flex Card
+/* Cards
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
