--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -46,7 +46,7 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 1100px;
+  max-width: 1024px;
   padding: 20px 20px;
   margin: 0 auto;
   box-sizing: border-box;
@@ -146,7 +146,7 @@ body {
   font-weight: 400;
   font-family: "Poppins", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222;
-  background-color: #f5f5f5;
+  background-color: #f9f9f9;
 }
 
 
@@ -190,9 +190,11 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  text-decoration: none;
+}
 a:hover {
-  color: #0FA0CE; }
+  color: #666;
+}
 
 
 /* Buttons
