--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -25,8 +25,13 @@
 + Text Align
 + Fill
 + Visiblity
++ Aligner
+
+**Components**
+
 + Push Menu
 + Clean Search
++ Flex Card
 */
 
 
@@ -41,7 +46,7 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 960px;
+  max-width: 1024px;
   padding: 20px 20px;
   margin: 0 auto;
   box-sizing: border-box;
@@ -59,14 +64,14 @@
 /* For devices larger than 400px */
 @media (min-width: 400px) {
   .container {
-    width: 85%;
+    width: 95%;
     padding: 20px; }
 }
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .container {
-    width: 80%; }
+    width: 90%; }
   .column,
   .columns {
     margin-left: 4%; }
@@ -141,6 +146,7 @@ body {
   font-weight: 400;
   font-family: "Poppins", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222;
+  background-color: #f9f9f9;
 }
 
 
@@ -184,9 +190,11 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  text-decoration: none;
+}
 a:hover {
-  color: #0FA0CE; }
+  color: #666;
+}
 
 
 /* Buttons
@@ -791,7 +799,7 @@ there.
 @media (min-width: 750px) {}
 
 /* Larger than desktop */
-@media (min-width: 1000px) {}
+@media (min-width: 1024px) {}
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
@@ -852,7 +860,7 @@ there.
 }
 
 /* Larger than tablet */
-@media (max-width: 1000px) {
+@media (max-width: 1024px) {
   .show-xs {display: none}
   .show-sm {display: none}
   .show-md {display: block}
@@ -879,6 +887,42 @@ there.
   .show-lg {display: none}
   .show-xl {display: none}
   .hide-xs {display: none}
+}
+
+/* Aligner
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.aligner {
+  width: 100%;
+  position: relative;
+}
+
+.aligner .center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  -moz-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  -o-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+}
+
+.aligner .right {
+  position: absolute;
+  right: 0;
+}
+.aligner .left {
+  position: absolute;
+  left: 0;
+}
+.aligner .top {
+  position: absolute;
+  top: 0;
+}
+.aligner .bottom {
+  position: absolute;
+  bottom: 0;
 }
 
 /* Push Menu
@@ -1058,7 +1102,7 @@ padding: 4px;
   /* Submenu Icon */
 }
 .pmenu-submenu-open ul {
-  max-height: 1000px;
+  max-height: 1024px;
 }
 .pmenu-submenu-open .pmenu-link {
   opacity: 1;
@@ -1086,6 +1130,7 @@ nav ul{
   display: flex;
   width: 100%;
   height: 60px;
+  background-color: #fff;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -1099,7 +1144,7 @@ nav ul{
 }
 
 .pmenu-header .header-left a {
-	font-size: 24px;
+	font-size: 26px;
 	color: #333;
 	text-align: center;
 	cursor: pointer;
@@ -1111,7 +1156,7 @@ nav ul{
 }
 
 .pmenu-header .header-right a {
-	font-size: 24px;
+	font-size: 26px;
 	color: #333;
 	text-align: center;
 	cursor: pointer;
@@ -1126,6 +1171,9 @@ nav ul{
   margin: 0 auto;
   line-height: 40px;
 }
+
+/* Cleab Search
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .clean-search {
   opacity: 0;
@@ -1152,7 +1200,7 @@ nav ul{
 }
 
 .clean-search .clean-search-btn {
-  font-size: 24px;
+  font-size: 26px;
   height: 60px;
   width: 60px;
   float: right;
@@ -1161,7 +1209,7 @@ nav ul{
 
 .clean-search .clean-search-btn i {
   color: #222;
-  margin-left: 22px;
+  margin-left: 20px;
 }
 
 .clean-search-active {
@@ -1176,19 +1224,174 @@ nav ul{
 
 input.clean-search-input::-webkit-input-placeholder {
     color: #999;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
     font-weight: 500;
 }
 input.clean-search-input:-ms-input-placeholder {
     color: #999;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
     font-weight: 500;
 }
 input.clean-search-input::-moz-placeholder {
     color: #999;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
     font-weight: 500;
 }
 .checkbox_1 {
   color: red;
+}
+
+
+/* Cards
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.cards {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-top: 15px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.card {
+  position: relative;
+  margin-bottom: 20px;
+  padding-bottom: 30px;
+  background: #fefff9;
+  color: #363636;
+  text-decoration: none;
+  -moz-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 0 6px 0;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+}
+@media (max-width: 1024px) {
+  .card {
+    width: 100%;
+    margin-right: 0px;
+  }
+}
+@media (min-width: 1024px) {
+   .card-1 {
+     width: 100%;
+  }
+   .card-2 {
+    max-width: 482px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+  }
+  .card-3 {
+    max-width: 314px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+  }
+  .card-2:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .card-2:nth-child(even) {
+    margin-right: 0px;
+  }
+  .card-3:nth-child(even) {
+    margin-right: 20px;
+  }
+  .card-3:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+.card span {
+  display: block;
+}
+.card .card-summary {
+  padding: 12px;
+}
+.card .card-header {
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(255, 255, 255, 0.15);
+  background-blend-mode: overlay;
+  -moz-border-radius: 4px 4px 0 0;
+  -webkit-border-radius: 4px;
+  border-radius: 4px 4px 0 0;
+}
+.card .card-header-img {
+  position: relative;
+  height: 175px;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(255, 255, 255, 0.15);
+  background-blend-mode: overlay;
+  -moz-border-radius: 4px 4px 0 0;
+  -webkit-border-radius: 4px;
+  border-radius: 4px 4px 0 0;
+}
+.card .card-header-img:hover, .card .card-header-img:focus {
+  background-color: rgba(255, 255, 255, 0);
+}
+.card .card-header .card-title {
+  background: #fff;
+  padding: 12px;
+  color: #333;
+  font-family: 'Poppins', sans-serif;
+  text-transform: uppercase;
+  border-bottom: solid #e5e5e5 1px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+.card .card-header-img .card-title {
+  background: rgba(0, 0, 0, 0.55);
+  padding: 12px 0px;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+.card > .card-title h3 {
+  font-size: 1.2em;
+  line-height: 1.2;
+  padding: 12px;
+  border-bottom: solid #f1f1f1 1px;
+  margin: 0;
+}
+.card .card-header-img .card-title h3 {
+  font-size: 1.2em;
+  line-height: 1.2;
+  padding: 12px;
+  margin: 0;
+}
+.card .card-meta {
+  max-height: 1em;
+  color: #888;
+  font-size: .7em;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 0px;
+  padding: 12px;
+}
+
+.card .card-meta-right {
+  max-height: 1em;
+  color: #888;
+  font-size: .7em;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  padding: 12px;
 }
