--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -1267,10 +1267,10 @@ input.clean-search-input::-moz-placeholder {
   text-decoration: none;
   -moz-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
   -webkit-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 0 6px 0;
+  box-shadow: rgba(0, 0, 0, 0.15) 1px 1px 2px 0, rgba(0, 0, 0, 0.15) 0 0 6px 0;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
-  border-radius: 4px;
+  border-radius: 3px;
 }
 @media (max-width: 1024px) {
   .card {
