--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -47,7 +47,7 @@
   position: relative;
   width: 100%;
   max-width: 1024px;
-  padding: 20px 20px;
+  padding: 20px 2.5%;
   margin: 0 auto;
   box-sizing: border-box;
 }
