--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -1260,8 +1260,6 @@ input.clean-search-input::-moz-placeholder {
 
 .card {
   position: relative;
-  margin-bottom: 20px;
-  padding-bottom: 30px;
   background: #fefff9;
   color: #363636;
   text-decoration: none;
@@ -1285,12 +1283,10 @@ input.clean-search-input::-moz-placeholder {
    .card-2 {
     max-width: 482px;
     margin-right: 20px;
-    margin-bottom: 20px;
   }
   .card-3 {
     max-width: 314px;
     margin-right: 20px;
-    margin-bottom: 20px;
   }
   .card-2:nth-child(2n) {
     margin-right: 0;
@@ -1313,6 +1309,8 @@ input.clean-search-input::-moz-placeholder {
 }
 .card .card-summary {
   padding: 12px;
+  border-top: solid 1px rgba(0, 0, 0, 0.1);
+  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
 .card .card-header {
   overflow: hidden;
@@ -1347,7 +1345,6 @@ input.clean-search-input::-moz-placeholder {
   color: #333;
   font-family: 'Poppins', sans-serif;
   text-transform: uppercase;
-  border-bottom: solid #e5e5e5 1px;
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -1366,32 +1363,131 @@ input.clean-search-input::-moz-placeholder {
   font-size: 1.2em;
   line-height: 1.2;
   padding: 12px;
-  border-bottom: solid #f1f1f1 1px;
   margin: 0;
 }
+
+/* COLOR */
+.cards .filled .card-title {
+  border-radius: 3px 3px 0 0;
+  color: #fff !important;
+}
+.cards .filled .card-meta span {
+  color: rgba(255, 255, 255, 0.92) !important;
+}
+.cards .filled .dark {
+  background-color: #333;
+  color: #fff;
+}
+.cards .filled .red {
+  background-color: #ad1e25;
+  color: #fff;
+}
+.cards .filled .orange {
+  background-color: #eb7413;
+  color: #fff;
+}
+.cards .filled .blue {
+  background-color: #007bc3;
+  color: #fff;
+}
+.cards .filled .green {
+  background-color: #008051;
+  color: #fff;
+}
+
+/* COLOR THEME */
+
+.cards .warn, .dang, .info, .succ .card-title {
+  border-radius: 3px 3px 0 0;
+  color: #fff !important;
+}
+.cards .dang, .warn, .info, .succ .card-meta span {
+  color: rgba(255, 255, 255, 0.92) !important;
+}
+.cards .dang .card-title {
+  background-color: #ad1e25;
+  color: #fff;
+}
+.cards .dang .card-summary {
+  background-color: #ad1e25;
+  color: #fff;
+}
+.cards .dang .card-meta {
+  background-color: #ad1e25;
+  color: #fff;
+}
+.cards .warn .card-title {
+  background-color: #eb7413;
+  color: #fff;
+}
+.cards .warn .card-summary {
+  background-color: #eb7413;
+  color: #fff;
+}
+.cards .warn .card-meta {
+  background-color: #eb7413;
+  color: #fff;
+}
+.cards .info .card-title {
+  background-color: #007bc3;
+  color: #fff;
+}
+.cards .info .card-summary {
+  background-color: #007bc3;
+  color: #fff;
+}
+.cards .info .card-meta {
+  background-color: #007bc3;
+  color: #fff;
+}
+.cards .succ .card-title {
+  background-color: #008051;
+  color: #fff;
+}
+.cards .succ .card-summary {
+  background-color: #008051;
+  color: #fff;
+}
+.cards .succ .card-meta {
+  background-color: #008051;
+  color: #fff;
+}
+
 .card .card-header-img .card-title h3 {
   font-size: 1.2em;
   line-height: 1.2;
   padding: 12px;
   margin: 0;
 }
+
 .card .card-meta {
-  max-height: 1em;
-  color: #888;
-  font-size: .7em;
-  text-transform: uppercase;
-  position: absolute;
-  bottom: 0px;
-  padding: 12px;
+  position: relative;
+  width: 100%;
+  height: 30px;
+  border-radius: 0 0 3px 3px;
 }
 
-.card .card-meta-right {
+.card .card-meta .left {
   max-height: 1em;
   color: #888;
   font-size: .7em;
   text-transform: uppercase;
   position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
   bottom: 0px;
-  right: 0px;
-  padding: 12px;
+  padding: 8px 12px 12px 12px;
+}
+
+.card .card-meta .right {
+  max-height: 1em;
+  color: #888;
+  font-size: .7em;
+  text-transform: uppercase;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0px;
+  padding: 8px 12px 12px 12px;
 }
