--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -1126,7 +1126,7 @@ nav ul{
 }
 
 /* Header Style */
-.pmenu-header {
+.menu-header {
   display: flex;
   width: 100%;
   height: 60px;
@@ -1138,39 +1138,75 @@ nav ul{
   transition: all  0.3s ease;
 }
 
-.pmenu-header .header-left {
+.menu-header .header-left {
   text-align: left;
   padding: 10px 20px;
 }
 
-.pmenu-header .header-left a {
+.menu-header .header-left i {
 	font-size: 26px;
 	color: #333;
 	text-align: center;
 	cursor: pointer;
 }
 
-.pmenu-header .header-right {
+.menu-header .header-right {
   text-align: right;
   padding: 10px 20px;
 }
 
-.pmenu-header .header-right a {
+.menu-header .header-right i {
 	font-size: 26px;
 	color: #333;
 	text-align: center;
 	cursor: pointer;
 }
 
-.pmenu-header .header-center {
+.menu-header .header-center {
   margin: auto;
   padding: 10px 20px;
 }
 
-.pmenu-header .header-center h4 {
+.menu-header .header-center h4 {
   margin: 0 auto;
   line-height: 40px;
 }
+
+.menu-header span a {
+  font-size: 18px;
+  color: #333;
+  margin-top: 16px;
+  margin-left: 12px;
+}
+.menu-header .header-left {
+  padding-top: 16px;
+}
+
+.fix-menu-header {
+  position: fixed;
+  z-index: 1100;
+}
+
+.default-nav {
+  position: fixed;
+  padding: 80px 30px 0 20px;
+  background-color: #333;
+  height: 100%;;
+  z-index: 1000;
+}
+
+.default-nav ul {
+  list-style: none;
+}
+
+.default-nav ul li {
+  line-height: 54px;
+}
+
+.default-nav ul a {
+  color: #fff
+}
+
 
 /* Cleab Search
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -1279,14 +1315,22 @@ input.clean-search-input::-moz-placeholder {
 @media (min-width: 1024px) {
    .card-1 {
      width: 100%;
+     overflow: hidden;
   }
    .card-2 {
     max-width: 482px;
     margin-right: 20px;
+    overflow: hidden;
   }
   .card-3 {
     max-width: 314px;
     margin-right: 20px;
+    overflow: hidden;
+  }
+  .card-4 {
+    max-width: 231px;
+    margin-right: 20px;
+    overflow: hidden;
   }
   .card-2:nth-child(2n) {
     margin-right: 0;
@@ -1303,6 +1347,9 @@ input.clean-search-input::-moz-placeholder {
   .card-3:nth-child(3n) {
     margin-right: 0;
   }
+  .card-4:nth-child(4n) {
+    margin-right: 0;
+  }
 }
 .card span {
   display: block;
@@ -1311,6 +1358,8 @@ input.clean-search-input::-moz-placeholder {
   padding: 12px;
   border-top: solid 1px rgba(0, 0, 0, 0.1);
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+  max-height: 5.8em;
+  overflow: hidden;
 }
 .card .card-header {
   overflow: hidden;
@@ -1367,10 +1416,6 @@ input.clean-search-input::-moz-placeholder {
 }
 
 /* COLOR */
-.cards .filled .card-title {
-  border-radius: 3px 3px 0 0;
-  color: #fff !important;
-}
 .cards .filled .card-meta span {
   color: rgba(255, 255, 255, 0.92) !important;
 }
@@ -1396,12 +1441,16 @@ input.clean-search-input::-moz-placeholder {
 }
 
 /* COLOR THEME */
-
-.cards .warn, .dang, .info, .succ .card-title {
-  border-radius: 3px 3px 0 0;
-  color: #fff !important;
+.cards .dang .card-meta span {
+  color: rgba(255, 255, 255, 0.92) !important;
 }
-.cards .dang, .warn, .info, .succ .card-meta span {
+.cards .warn .card-meta span {
+  color: rgba(255, 255, 255, 0.92) !important;
+}
+.cards .info .card-meta span {
+  color: rgba(255, 255, 255, 0.92) !important;
+}
+.cards .succ .card-meta span {
   color: rgba(255, 255, 255, 0.92) !important;
 }
 .cards .dang .card-title {
