--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -32,7 +32,6 @@
 + Push Menu
 + Clean Search
 + Flex Card
-+ Slider
 */
 
 
@@ -47,7 +46,7 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 1024px;
+  max-width: 1240px;
   padding: 20px 2.5%;
   margin: 0 auto;
   box-sizing: border-box;
@@ -75,7 +74,7 @@
     width: 90%; }
   .column,
   .columns {
-    margin-left: 4%; }
+    margin-left: 1.5%; }
   .column:first-child,
   .columns:first-child {
     margin-left: 0; }
@@ -83,10 +82,10 @@
   .one.column,
   .one.columns                    { width: 4.66666666667%; }
   .two.columns                    { width: 13.3333333333%; }
-  .three.columns                  { width: 22%;            }
-  .four.columns                   { width: 30.6666666667%; }
+  .three.columns                  { width: 23.87%;            }
+  .four.columns                   { width: 32.33%; }
   .five.columns                   { width: 39.3333333333%; }
-  .six.columns                    { width: 48%;            }
+  .six.columns                    { width: 49.1%;            }
   .seven.columns                  { width: 56.6666666667%; }
   .eight.columns                  { width: 65.3333333333%; }
   .nine.columns                   { width: 74.0%;          }
@@ -1179,103 +1178,33 @@ nav ul{
   margin-top: 16px;
   margin-left: 12px;
 }
-.menu-header .header-left {
-  padding-top: 16px;
-}
 
 .fix-menu-header {
   position: fixed;
   z-index: 1100;
 }
 
-.default-nav {
-  position: fixed;
-  padding: 80px 30px 0 20px;
-  background-color: #333;
-  height: 100%;;
-  z-index: 1000;
-}
+@media (min-width: 1200px) {
+  .default-nav {
+    position: relative;
+    padding: 80px 20px 20px 36px;
+    background-color: #333;
+    z-index: 1000;
+    height: 100vmax;
+    margin-left: 0;
+  }
 
-.default-nav ul {
-  list-style: none;
-}
+  .default-nav ul {
+    list-style: none;
+  }
 
-.default-nav ul li {
-  line-height: 54px;
-}
+  .default-nav ul li {
+    line-height: 54px;
+  }
 
-.default-nav ul a {
-  color: #fff
-}
-
-
-/* Cleab Search
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.clean-search {
-  opacity: 0;
-  display: none;
-  z-index: 50;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1);
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all  0.3s ease;
-}
-
-.clean-search .clean-search-input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 60px !important;
-  box-shadow: none;
-  border: none;
-  width : 95% ; /* IE8以下とAndroid4.3以下用フォールバック */
-  width : -webkit-calc(100% - 60px) ;
-  width : calc(100% - 60px) ;
-  text-align: center;
-}
-
-.clean-search .clean-search-btn {
-  font-size: 26px;
-  height: 60px;
-  width: 60px;
-  float: right;
-  padding-top: 10px;
-}
-
-.clean-search .clean-search-btn i {
-  color: #222;
-  margin-left: 20px;
-}
-
-.clean-search-active {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 60px !important;
-  opacity: 1;
-  display: block;
-  box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.1);
-}
-
-input.clean-search-input::-webkit-input-placeholder {
-    color: #999;
-    letter-spacing: 2px;
-    font-weight: 500;
-}
-input.clean-search-input:-ms-input-placeholder {
-    color: #999;
-    letter-spacing: 2px;
-    font-weight: 500;
-}
-input.clean-search-input::-moz-placeholder {
-    color: #999;
-    letter-spacing: 2px;
-    font-weight: 500;
-}
-.checkbox_1 {
-  color: red;
+  .default-nav ul a {
+    color: #fff
+  }
 }
 
 /* Cards
@@ -1288,7 +1217,6 @@ input.clean-search-input::-moz-placeholder {
   justify-content: center;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-top: 15px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -1305,6 +1233,8 @@ input.clean-search-input::-moz-placeholder {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 3px;
+  overflow: hidden;
+  margin-top: 15px;
 }
 @media (max-width: 1024px) {
   .card {
@@ -1312,45 +1242,7 @@ input.clean-search-input::-moz-placeholder {
     margin-right: 0px;
   }
 }
-@media (min-width: 1024px) {
-   .card-1 {
-     width: 100%;
-     overflow: hidden;
-  }
-   .card-2 {
-    max-width: 482px;
-    margin-right: 20px;
-    overflow: hidden;
-  }
-  .card-3 {
-    max-width: 314px;
-    margin-right: 20px;
-    overflow: hidden;
-  }
-  .card-4 {
-    max-width: 231px;
-    margin-right: 20px;
-    overflow: hidden;
-  }
-  .card-2:nth-child(2n) {
-    margin-right: 0;
-  }
-}
 
-@media (min-width: 1024px) {
-  .card-2:nth-child(even) {
-    margin-right: 0px;
-  }
-  .card-3:nth-child(even) {
-    margin-right: 20px;
-  }
-  .card-3:nth-child(3n) {
-    margin-right: 0;
-  }
-  .card-4:nth-child(4n) {
-    margin-right: 0;
-  }
-}
 .card span {
   display: block;
 }
@@ -1539,346 +1431,4 @@ input.clean-search-input::-moz-placeholder {
   right: 0;
   bottom: 0px;
   padding: 8px 12px 12px 12px;
-}
-
-/* Cards
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.slick-slider
-{
-    position: relative;
-
-    display: block;
-    box-sizing: border-box;
-
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-
-    -webkit-touch-callout: none;
-    -khtml-user-select: none;
-    -ms-touch-action: pan-y;
-        touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent;
-}
-
-.slick-list
-{
-    position: relative;
-
-    display: block;
-    overflow: hidden;
-
-    margin: 0;
-    padding: 0;
-}
-.slick-list:focus
-{
-    outline: none;
-}
-.slick-list.dragging
-{
-    cursor: pointer;
-    cursor: hand;
-}
-
-.slick-slider .slick-track,
-.slick-slider .slick-list
-{
-    -webkit-transform: translate3d(0, 0, 0);
-       -moz-transform: translate3d(0, 0, 0);
-        -ms-transform: translate3d(0, 0, 0);
-         -o-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-}
-
-.slick-track
-{
-    position: relative;
-    top: 0;
-    left: 0;
-
-    display: block;
-}
-.slick-track:before,
-.slick-track:after
-{
-    display: table;
-
-    content: '';
-}
-.slick-track:after
-{
-    clear: both;
-}
-.slick-loading .slick-track
-{
-    visibility: hidden;
-}
-
-.slick-slide
-{
-    display: none;
-    float: left;
-
-    height: 100%;
-    min-height: 1px;
-}
-[dir='rtl'] .slick-slide
-{
-    float: right;
-}
-.slick-slide img
-{
-    display: block;
-}
-.slick-slide.slick-loading img
-{
-    display: none;
-}
-.slick-slide.dragging img
-{
-    pointer-events: none;
-}
-.slick-initialized .slick-slide
-{
-    display: block;
-}
-.slick-loading .slick-slide
-{
-    visibility: hidden;
-}
-.slick-vertical .slick-slide
-{
-    display: block;
-
-    height: auto;
-
-    border: 1px solid transparent;
-}
-.slick-arrow.slick-hidden {
-    display: none;
-}
-@charset 'UTF-8';
-/* Slider */
-.slick-loading .slick-list
-{
-    background: #fff url('./ajax-loader.gif') center center no-repeat;
-}
-
-/* Icons */
-@font-face
-{
-    font-family: 'slick';
-    font-weight: normal;
-    font-style: normal;
-
-    src: url('./fonts/slick.eot');
-    src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
-}
-/* Arrows */
-.slick-prev,
-.slick-next
-{
-    font-size: 0;
-    line-height: 0;
-
-    position: absolute;
-    top: 50%;
-
-    display: block;
-
-    width: 20px;
-    height: 20px;
-    margin-top: -10px;
-    padding: 0;
-
-    cursor: pointer;
-
-    color: transparent;
-    border: none;
-    outline: none;
-    background: transparent;
-}
-.slick-prev:hover,
-.slick-prev:focus,
-.slick-next:hover,
-.slick-next:focus
-{
-    color: transparent;
-    outline: none;
-    background: transparent;
-}
-.slick-prev:hover:before,
-.slick-prev:focus:before,
-.slick-next:hover:before,
-.slick-next:focus:before
-{
-    opacity: 1;
-}
-.slick-prev.slick-disabled:before,
-.slick-next.slick-disabled:before
-{
-    opacity: .25;
-}
-
-.slick-prev:before,
-.slick-next:before
-{
-    font-family: 'slick';
-    font-size: 20px;
-    line-height: 1;
-
-    opacity: .75;
-    color: white;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-.slick-prev
-{
-    left: -25px;
-}
-[dir='rtl'] .slick-prev
-{
-    right: -25px;
-    left: auto;
-}
-.slick-prev:before
-{
-    content: url("../images/arrow-left.gif") ;
-}
-[dir='rtl'] .slick-prev:before
-{
-    content: url("../images/arrow-left.gif") ;
-}
-
-.slick-next
-{
-    right: -25px;
-}
-[dir='rtl'] .slick-next
-{
-    right: auto;
-    left: -25px;
-}
-.slick-next:before
-{
-    content: url("../images/arrow-right.gif") ;
-}
-[dir='rtl'] .slick-next:before
-{
-    content: url("../images/arrow-right.gif") ;
-}
-
-/* Dots */
-.slick-slider
-{
-    margin-bottom: 30px;
-}
-
-.slick-dots
-{
-    position: absolute;
-    bottom: -50px;
-
-    display: block;
-
-    width: 100%;
-    padding: 0;
-
-    list-style: none;
-
-    text-align: center;
-}
-.slick-dots li
-{
-    position: relative;
-
-    display: inline-block;
-
-    width: 20px;
-    height: 20px;
-    margin: 0 5px;
-    padding: 0;
-
-    cursor: pointer;
-}
-.slick-dots li button
-{
-    font-size: 0;
-    line-height: 0;
-
-    display: block;
-
-    width: 20px;
-    height: 20px;
-    padding: 5px;
-
-    cursor: pointer;
-
-    color: transparent;
-    border: 0;
-    outline: none;
-    background: transparent;
-}
-.slick-dots li button:hover,
-.slick-dots li button:focus
-{
-    outline: none;
-}
-.slick-dots li button:hover:before,
-.slick-dots li button:focus:before
-{
-    opacity: 1;
-}
-.slick-dots li button:before
-{
-    font-family: 'slick';
-    font-size: 6px;
-    line-height: 20px;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 20px;
-    height: 20px;
-
-    content: '●';
-    text-align: center;
-
-    opacity: .25;
-    color: black;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-.slick-dots li.slick-active button:before
-{
-    opacity: .75;
-    color: black;
-}
-
-
-.slider {
-    width: 100%;
-    margin: 0 auto;
-}
-
-.slick-slide {
-  margin: 0px 4px;
-}
-
-.slick-slide img {
-  width: 100%;
-}
-
-.slick-slide {
-  opacity: 0.6;
-}
-.slick-center {
-  opacity: 1;
 }
