--- a/themes/css/qwerty.css
+++ b/themes/css/qwerty.css
@@ -46,7 +46,7 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 1024px;
+  max-width: 1240px;
   padding: 20px 2.5%;
   margin: 0 auto;
   box-sizing: border-box;
@@ -74,7 +74,7 @@
     width: 90%; }
   .column,
   .columns {
-    margin-left: 4%; }
+    margin-left: 1.5%; }
   .column:first-child,
   .columns:first-child {
     margin-left: 0; }
@@ -82,10 +82,10 @@
   .one.column,
   .one.columns                    { width: 4.66666666667%; }
   .two.columns                    { width: 13.3333333333%; }
-  .three.columns                  { width: 22%;            }
-  .four.columns                   { width: 30.6666666667%; }
+  .three.columns                  { width: 23.87%;            }
+  .four.columns                   { width: 32.33%; }
   .five.columns                   { width: 39.3333333333%; }
-  .six.columns                    { width: 48%;            }
+  .six.columns                    { width: 49.1%;            }
   .seven.columns                  { width: 56.6666666667%; }
   .eight.columns                  { width: 65.3333333333%; }
   .nine.columns                   { width: 74.0%;          }
@@ -1178,9 +1178,6 @@ nav ul{
   margin-top: 16px;
   margin-left: 12px;
 }
-.menu-header .header-left {
-  padding-top: 16px;
-}
 
 .fix-menu-header {
   position: fixed;
@@ -1220,7 +1217,6 @@ nav ul{
   justify-content: center;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-top: 15px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -1237,6 +1233,8 @@ nav ul{
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 3px;
+  overflow: hidden;
+  margin-top: 15px;
 }
 @media (max-width: 1024px) {
   .card {
@@ -1244,45 +1242,7 @@ nav ul{
     margin-right: 0px;
   }
 }
-@media (min-width: 1024px) {
-   .card-1 {
-     width: 100%;
-     overflow: hidden;
-  }
-   .card-2 {
-    max-width: 482px;
-    margin-right: 20px;
-    overflow: hidden;
-  }
-  .card-3 {
-    max-width: 314px;
-    margin-right: 20px;
-    overflow: hidden;
-  }
-  .card-4 {
-    max-width: 231px;
-    margin-right: 20px;
-    overflow: hidden;
-  }
-  .card-2:nth-child(2n) {
-    margin-right: 0;
-  }
-}
 
-@media (min-width: 1024px) {
-  .card-2:nth-child(even) {
-    margin-right: 0px;
-  }
-  .card-3:nth-child(even) {
-    margin-right: 20px;
-  }
-  .card-3:nth-child(3n) {
-    margin-right: 0;
-  }
-  .card-4:nth-child(4n) {
-    margin-right: 0;
-  }
-}
 .card span {
   display: block;
 }
