--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -85,7 +85,7 @@
   .three.columns                  { width: 23.87%;            }
   .four.columns                   { width: 32.33%; }
   .five.columns                   { width: 39.3333333333%; }
-  .six.columns                    { width: 49.1%;            }
+  .six.columns                    { width: 49.25%;            }
   .seven.columns                  { width: 56.6666666667%; }
   .eight.columns                  { width: 65.3333333333%; }
   .nine.columns                   { width: 74.0%;          }
@@ -239,7 +239,7 @@ button:active,
 input[type="submit"]:active,
 input[type="reset"]:active,
 input[type="button"]:active {
-  top: 3px !important;
+  top: 3px;
   background-color: #e5e5e5;
 }
 
@@ -1187,7 +1187,6 @@ nav ul{
 @media (min-width: 1200px) {
   .default-nav {
     position: relative;
-    padding: 80px 20px 20px 36px;
     background-color: #333;
     z-index: 1000;
     height: 100vmax;
@@ -1196,10 +1195,23 @@ nav ul{
 
   .default-nav ul {
     list-style: none;
+    margin-top: 60px;
   }
 
   .default-nav ul li {
-    line-height: 54px;
+    line-height: 70px;
+    margin: 0;
+    padding-left: 24px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all  0.3s ease;
+  }
+
+  .default-nav ul li:hover {
+    line-height: 70px;
+    margin: 0;
+    background-color: #555;
   }
 
   .default-nav ul a {
