--- a/themes/css/qwerty.css
+++ b/themes/css/qwerty.css
@@ -85,7 +85,7 @@
   .three.columns                  { width: 23.87%;            }
   .four.columns                   { width: 32.33%; }
   .five.columns                   { width: 39.3333333333%; }
-  .six.columns                    { width: 49.1%;            }
+  .six.columns                    { width: 49.25%;            }
   .seven.columns                  { width: 56.6666666667%; }
   .eight.columns                  { width: 65.3333333333%; }
   .nine.columns                   { width: 74.0%;          }
@@ -239,7 +239,6 @@ button:active,
 input[type="submit"]:active,
 input[type="reset"]:active,
 input[type="button"]:active {
-  top: 3px !important;
   background-color: #e5e5e5;
 }
 
@@ -1140,7 +1139,7 @@ nav ul{
 
 .menu-header .header-left {
   text-align: left;
-  padding: 10px 20px;
+  padding: 16px 20px;
 }
 
 .menu-header .header-left i {
@@ -1187,7 +1186,6 @@ nav ul{
 @media (min-width: 1200px) {
   .default-nav {
     position: relative;
-    padding: 80px 20px 20px 36px;
     background-color: #333;
     z-index: 1000;
     height: 100vmax;
@@ -1196,10 +1194,23 @@ nav ul{
 
   .default-nav ul {
     list-style: none;
+    margin-top: 60px;
   }
 
   .default-nav ul li {
     line-height: 54px;
+    margin: 0;
+    padding-left: 24px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all  0.3s ease;
+  }
+
+  .default-nav ul li:hover {
+    line-height: 54px;
+    margin: 0;
+    background-color: #555;
   }
 
   .default-nav ul a {
@@ -1307,6 +1318,16 @@ nav ul{
   margin: 0;
 }
 
+.card .card-close {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  cursor: pointer;
+}
+
+.card .card-close:hover {
+  color: #eee;
+}
 /* COLOR */
 .cards .filled .card-meta span {
   color: rgba(255, 255, 255, 0.92) !important;
