--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -1,8 +1,7 @@
 @import 'https://fonts.googleapis.com/css?family=Viga';
 .logo {
-  font-family: 'Viga', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 2rem;
-  letter-spacing: .4rem;
   padding-left: 8px;
   color: #333;
 }
@@ -17,8 +16,45 @@
 .pmenu .brand-box p {
   font-family: 'Viga', sans-serif;
   font-size: 1.5rem;
-  letter-spacing: .4rem;
   padding-left: 1.2px;
   color: #e1e1e1;
   margin: 0;
+}
+
+.heading-top h5 {
+  margin: 0;
+  color: #555;
+  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.4);
+}
+
+.heading-top {
+  padding: 8px;
+}
+
+.hook-input .text {
+  height: 40px;
+  padding: 12px;
+  margin: 0px;
+  width: 80%;
+  border-right: 0px solid #000;;
+}
+
+.hook-input .submit {
+  height: 40px;
+  border-radius: 0px;
+  padding: 12px;
+  margin: 0;
+  width: 20%;
+  position: absolute;
+  line-height: 1.6em;
+}
+
+.hook-input .submit:active {
+  height: 40px;
+  border-radius: 0px;
+  padding: 12px;
+  margin: 0;
+  width: 20%;
+  position: absolute;
+  line-height: 1.6em;
 }
