modify nav style

--- a/themes/css/qwerty.css
+++ b/themes/css/qwerty.css
@@ -1199,9 +1199,10 @@ nav ul{
   }
 
   .default-nav ul li {
-    line-height: 70px;
+    line-height: 40px;
     margin: 0;
     padding-left: 24px;
+    border-bottom: 1px solid #3e3e3e;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
@@ -1209,7 +1210,7 @@ nav ul{
   }
 
   .default-nav ul li:hover {
-    line-height: 70px;
+    line-height: 40px;
     margin: 0;
     background-color: #555;
   }
@@ -1274,7 +1275,7 @@ nav ul{
 
 .card {
   position: relative;
-  background: #fefff9;
+  background: #FFF;
   color: #363636;
   text-decoration: none;
   -moz-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
