--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -1,9 +1,10 @@
 @import 'https://fonts.googleapis.com/css?family=Viga';
 .logo {
   font-family: 'Poppins', sans-serif;
-  font-size: 2rem;
+  font-size: 16px;
   padding-left: 8px;
   color: #333;
+  letter-spacing: 2px;
 }
 
 .pmenu .brand-box {
@@ -24,7 +25,6 @@
 .heading-top h5 {
   margin: 0;
   color: #555;
-  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.4);
 }
 
 .heading-top {
@@ -64,5 +64,9 @@
 }
 
 .default-nav ul li i {
-  margin: 0 10%; 
+  margin: 0 10%;
+}
+
+.text-logo .logo {
+  margin-top: 10px;
 }
