--- a/themes/css/qwerty.css
+++ b/themes/css/qwerty.css
@@ -69,7 +69,7 @@
 }
 
 /* For devices larger than 550px */
-@media (min-width: 550px) {
+@media (min-width: 1200px) {
   .container {
     width: 90%; }
   .column,
@@ -89,7 +89,7 @@
   .seven.columns                  { width: 56.6666666667%; }
   .eight.columns                  { width: 65.3333333333%; }
   .nine.columns                   { width: 74.0%;          }
-  .ten.columns                    { width: 82.6666666667%; }
+  .ten.columns                    { width: 86.6%; }
   .eleven.columns                 { width: 91.3333333333%; }
   .twelve.columns                 { width: 100%; margin-left: 0; }
 
@@ -1180,7 +1180,7 @@ nav ul{
 }
 
 .fix-menu-header {
-  position: fixed;
+  position: absolute;
   z-index: 1100;
 }
 
