--- a/themes/css/qwerty.css
+++ b/themes/css/qwerty.css
@@ -90,7 +90,7 @@
   .seven.columns                  { width: 56.6666666667%; }
   .eight.columns                  { width: 65.3333333333%; }
   .nine.columns                   { width: 74.0%;          }
-  .ten.columns                    { width: 82.6666666667%; }
+  .ten.columns                    { width: 86.666667%; }
   .eleven.columns                 { width: 91.3333333333%; }
   .twelve.columns                 { width: 100%; margin-left: 0; }
 
@@ -1187,10 +1187,10 @@ nav ul{
 
 @media (min-width: 1200px) {
   .default-nav {
-    position: absolute;
+    position: relative;
     background-color: #333;
     z-index: 1000;
-    height: 100vh;
+    height: 100%;
     margin-left: 0;
   }
 
