--- a/themes/css/qwerty.css
+++ b/themes/css/qwerty.css
@@ -1,3 +1,4 @@
+/*! normalize.css v3.0.2 | MIT License | git.io/normalize */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:bold}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}
 /*
 * Skeleton V2.0.4
 * Copyright 2014, Dave Gamache
@@ -37,13 +38,13 @@
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.wrapper {
+.wrap {
   position: relative;
   width: 100%;
   margin: 0 auto;
   box-sizing: border-box;
 }
-.container {
+.pack {
   position: relative;
   width: 100%;
   max-width: 1240px;
@@ -51,8 +52,8 @@
   margin: 0 auto;
   box-sizing: border-box;
 }
-.column,
-.columns {
+.col,
+.cols {
   width: 100%;
   float: left;
   box-sizing: border-box; }
@@ -63,72 +64,72 @@
 
 /* For devices larger than 400px */
 @media (min-width: 400px) {
-  .container {
+  .pack {
     width: 95%;
     padding: 20px; }
 }
 
 /* For devices larger than 550px */
-@media (min-width: 1200px) {
-  .container {
+@media (min-width: 550px) {
+  .pack {
     width: 90%; }
-  .column,
-  .columns {
+  .col,
+  .cols {
     margin-left: 1.5%; }
-  .column:first-child,
-  .columns:first-child {
+  .col:first-child,
+  .cols:first-child {
     margin-left: 0; }
 
-  .one.column,
-  .one.columns                    { width: 4.66666666667%; }
-  .two.columns                    { width: 13.3333333333%; }
-  .three.columns                  { width: 23.87%;            }
-  .four.columns                   { width: 32.33%; }
-  .five.columns                   { width: 39.3333333333%; }
-  .six.columns                    { width: 49.25%;            }
-  .seven.columns                  { width: 56.6666666667%; }
-  .eight.columns                  { width: 65.3333333333%; }
-  .nine.columns                   { width: 74.0%;          }
-  .ten.columns                    { width: 86.6%; }
-  .eleven.columns                 { width: 91.3333333333%; }
-  .twelve.columns                 { width: 100%; margin-left: 0; }
+  .one.col,
+  .one.cols                    { width: 4.66666666667%; }
+  .two.cols                    { width: 13.3333333333%; }
+  .three.cols                  { width: 23.87%;            }
+  .four.cols                   { width: 32.33%; }
+  .five.cols                   { width: 39.3333333333%; }
+  .six.cols                    { width: 49.25%;            }
+  .seven.cols                  { width: 56.6666666667%; }
+  .eight.cols                  { width: 65.3333333333%; }
+  .nine.cols                   { width: 74.0%;          }
+  .ten.cols                    { width: 86.666667%; }
+  .eleven.cols                 { width: 91.3333333333%; }
+  .twelve.cols                 { width: 100%; margin-left: 0; }
 
-  .one-third.column               { width: 30.6666666667%; }
-  .two-thirds.column              { width: 65.3333333333%; }
+  .one-third               { width: calc(100%/3); }
+  .two-thirds              { width: calc(100%/3*2); }
 
-  .one-half.column                { width: 48%; }
+  .one-half                { width: calc(100%/2); }
 
   /* Offsets */
-  .offset-by-one.column,
-  .offset-by-one.columns          { margin-left: 8.66666666667%; }
-  .offset-by-two.column,
-  .offset-by-two.columns          { margin-left: 17.3333333333%; }
-  .offset-by-three.column,
-  .offset-by-three.columns        { margin-left: 26%;            }
-  .offset-by-four.column,
-  .offset-by-four.columns         { margin-left: 34.6666666667%; }
-  .offset-by-five.column,
-  .offset-by-five.columns         { margin-left: 43.3333333333%; }
-  .offset-by-six.column,
-  .offset-by-six.columns          { margin-left: 52%;            }
-  .offset-by-seven.column,
-  .offset-by-seven.columns        { margin-left: 60.6666666667%; }
-  .offset-by-eight.column,
-  .offset-by-eight.columns        { margin-left: 69.3333333333%; }
-  .offset-by-nine.column,
-  .offset-by-nine.columns         { margin-left: 78.0%;          }
-  .offset-by-ten.column,
-  .offset-by-ten.columns          { margin-left: 86.6666666667%; }
-  .offset-by-eleven.column,
-  .offset-by-eleven.columns       { margin-left: 95.3333333333%; }
+  .push-one.col,
+  .push-one.cols          { margin-left: 8.66666666667%; }
+  .push-two.col,
+  .push-two.cols          { margin-left: 17.3333333333%; }
+  .push-three.col,
+  .push-three.cols        { margin-left: 26%;            }
+  .push-four.col,
+  .push-four.cols         { margin-left: 34.6666666667%; }
+  .push-five.col,
+  .push-five.cols         { margin-left: 43.3333333333%; }
+  .push-six.col,
+  .push-six.cols          { margin-left: 52%;            }
+  .push-seven.col,
+  .push-seven.cols        { margin-left: 60.6666666667%; }
+  .push-eight.col,
+  .push-eight.cols        { margin-left: 69.3333333333%; }
+  .push-nine.col,
+  .push-nine.cols         { margin-left: 78.0%;          }
+  .push-ten.col,
+  .push-ten.cols          { margin-left: 86.6666666667%; }
+  .push-eleven.col,
+  .push-eleven.cols       { margin-left: 95.3333333333%; }
 
-  .offset-by-one-third.column,
-  .offset-by-one-third.columns    { margin-left: 34.6666666667%; }
-  .offset-by-two-thirds.column,
-  .offset-by-two-thirds.columns   { margin-left: 69.3333333333%; }
+  .push-one-third.col,
+  .push-one-third.cols    { margin-left: 34.6666666667%; }
+  .push-two-thirds.col,
+  .push-two-thirds.cols   { margin-left: 69.3333333333%; }
 
-  .offset-by-one-half.column,
-  .offset-by-one-half.columns     { margin-left: 52%; }
+  .push-one-half.col,
+  .push-one-half.cols     { margin-left: 52%; }
 
 }
 
@@ -231,7 +232,7 @@ input[type="button"]:hover,
 button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
-input[type="button"]:focus {
+input[type="button"]:focus {s
   outline: 0;
 }
 .btn:active,
@@ -772,7 +773,7 @@ hr {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 /* Self Clearing Goodness */
-.container:after,
+.pack:after,
 .row:after,
 .u-cf {
   content: "";
@@ -981,7 +982,7 @@ there.
   transform: translate3d(-200px, 0, 0);
 }
 
-.pmenu-open-left #wrapper,
+.pmenu-open-left #wrap,
 .pmenu-open-left .push {
   -webkit-transform: translate3d(200px, 0, 0);
   -ms-transform: translate3d(200px, 0, 0);
@@ -994,7 +995,7 @@ there.
   transform: translate3d(200px, 0, 0);
 }
 
-.pmenu-open-right #wrapper,
+.pmenu-open-right #wrap,
 .pmenu-open-right .push {
   -webkit-transform: translate3d(-200px, 0, 0);
   -ms-transform: translate3d(-200px, 0, 0);
@@ -1009,7 +1010,7 @@ there.
 }
 
 /* Menu Transitions */
-#wrapper,
+#wrap,
 .pmenu,
 .push {
   transition: transform 0.2s cubic-bezier(0.16, 0.68, 0.43, 0.99);
@@ -1180,7 +1181,7 @@ nav ul{
 }
 
 .fix-menu-header {
-  position: absolute;
+  position: fixed;
   z-index: 1100;
 }
 
@@ -1189,7 +1190,7 @@ nav ul{
     position: relative;
     background-color: #333;
     z-index: 1000;
-    height: 100vmax;
+    height: 100%;
     margin-left: 0;
   }
 
@@ -1199,10 +1200,9 @@ nav ul{
   }
 
   .default-nav ul li {
-    line-height: 40px;
+    line-height: 70px;
     margin: 0;
     padding-left: 24px;
-    border-bottom: 1px solid #3e3e3e;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
@@ -1210,7 +1210,7 @@ nav ul{
   }
 
   .default-nav ul li:hover {
-    line-height: 40px;
+    line-height: 70px;
     margin: 0;
     background-color: #555;
   }
@@ -1218,42 +1218,25 @@ nav ul{
   .default-nav ul a {
     color: #fff
   }
-
-  .default-nav .drawer {
-    display: none;
-  }
 }
 
 @media (max-width: 1200px) {
   .default-nav {
     position: relative;
     background-color: #333;
+    z-index: 1000;
     width:  100% !important;
     margin-left: 0;
   }
 
-  .default-nav .text-logo {
-    z-index: 100;
-  }
-
-  .default-nav .drawer-items {
-    margin-top: -306px;
-    z-index: -100;
-    display: none;
-  }
-
   .default-nav ul {
     list-style: none;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all  0.3s ease;
+    margin-top: 60px;
   }
 
   .default-nav ul li {
     text-align: center;
     line-height: 26px;
-    border-bottom: 1px solid #3e3e3e;
     margin: 0;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
@@ -1273,245 +1256,91 @@ nav ul{
   .default-nav ul a {
     color: #fff
   }
-
-  .default-nav .drawer {
-    height: 25px;
-    padding: 0;
-  }
 }
 
 /* Cards
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.cards {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 .card {
-  position: relative;
-  background: #FFF;
-  color: #363636;
-  text-decoration: none;
-  -moz-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
+  background-color: #fff;
+  border-radius: 4px;
   box-shadow: rgba(0, 0, 0, 0.15) 1px 1px 2px 0, rgba(0, 0, 0, 0.15) 0 0 6px 0;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 3px;
   overflow: hidden;
-  margin-top: 15px;
 }
-@media (max-width: 1024px) {
-  .card {
-    width: 100%;
-    margin-right: 0px;
-  }
+.card-red {
+  border-top: dashed 1px rgba(173,30,37,0.6);
 }
-
-.card span {
-  display: block;
+.card-red .head {
+  background-color: rgba(173,30,37,0.3);
+  color: rgba(173,30,37,0.8);
 }
-.card .card-summary {
-  padding: 12px;
+.card-yellow .head {
+  background-color: rgba(235,116,19,0.3);
+  color: rgba(235,116,19,0.8);
+}
+.card-green .head {
+  background-color: rgba(0, 128, 81,0.3);
+  color: rgba(0, 128, 81,0.8);
+}
+.card-blue .head {
+  background-color: rgba(0, 123, 195,0.3);
+  color: rgba(0, 123, 195,0.8);
+}
+.card .head {
+  padding: .8rem; padding-bottom: .5rem;
+}
+.card .image-head {
+  background-color: #999;
+  height: 200px;
+  background-size: cover;
+}
+.card .image-head .title {
+  position: absolute;
+  padding: 8px;
+  bottom: 45px;
+  color: #fff;
+}
+.card .body {
   border-top: solid 1px rgba(0, 0, 0, 0.1);
-  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
-  max-height: 5.8em;
-  overflow: hidden;
+  padding: .8rem;
+  padding-bottom: .5rem;
 }
-.card .card-header {
-  overflow: hidden;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-color: rgba(255, 255, 255, 0.15);
-  background-blend-mode: overlay;
-  -moz-border-radius: 4px 4px 0 0;
-  -webkit-border-radius: 4px;
-  border-radius: 4px 4px 0 0;
+.card .foot {
+  display: flex;
 }
-.card .card-header-img {
-  position: relative;
-  height: 175px;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-color: rgba(255, 255, 255, 0.15);
-  background-blend-mode: overlay;
-  -moz-border-radius: 4px 4px 0 0;
-  -webkit-border-radius: 4px;
-  border-radius: 4px 4px 0 0;
-}
-.card .card-header-img:hover, .card .card-header-img:focus {
-  background-color: rgba(255, 255, 255, 0);
-}
-.card .card-header .card-title {
-  background: #fff;
-  padding: 12px;
+.card .card-btn {
+  background-color: #fff;
   color: #333;
-  font-family: 'Poppins', sans-serif;
-  text-transform: uppercase;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-.card .card-header-img .card-title {
-  background: rgba(0, 0, 0, 0.55);
-  padding: 12px 0px;
-  color: white;
-  font-family: 'Poppins', sans-serif;
-  text-transform: uppercase;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-.card > .card-title h3 {
-  font-size: 1.2em;
-  line-height: 1.2;
-  padding: 12px;
-  margin: 0;
-}
-
-.card .card-close {
-  position: absolute;
-  top: 12px;
-  right: 12px;
-  cursor: pointer;
-}
-
-.card .card-close:hover {
-  color: #eee;
-}
-/* COLOR */
-.cards .filled .card-meta span {
-  color: rgba(255, 255, 255, 0.92) !important;
-}
-.cards .filled .dark {
-  background-color: #333;
-  color: #fff;
-}
-.cards .filled .red {
-  background-color: #ad1e25;
-  color: #fff;
-}
-.cards .filled .orange {
-  background-color: #eb7413;
-  color: #fff;
-}
-.cards .filled .blue {
-  background-color: #007bc3;
-  color: #fff;
-}
-.cards .filled .green {
-  background-color: #008051;
-  color: #fff;
-}
-
-/* COLOR THEME */
-.cards .dang .card-meta span {
-  color: rgba(255, 255, 255, 0.92) !important;
-}
-.cards .warn .card-meta span {
-  color: rgba(255, 255, 255, 0.92) !important;
-}
-.cards .info .card-meta span {
-  color: rgba(255, 255, 255, 0.92) !important;
-}
-.cards .succ .card-meta span {
-  color: rgba(255, 255, 255, 0.92) !important;
-}
-.cards .dang .card-title {
-  background-color: #ad1e25;
-  color: #fff;
-}
-.cards .dang .card-summary {
-  background-color: #ad1e25;
-  color: #fff;
-}
-.cards .dang .card-meta {
-  background-color: #ad1e25;
-  color: #fff;
-}
-.cards .warn .card-title {
-  background-color: #eb7413;
-  color: #fff;
-}
-.cards .warn .card-summary {
-  background-color: #eb7413;
-  color: #fff;
-}
-.cards .warn .card-meta {
-  background-color: #eb7413;
-  color: #fff;
-}
-.cards .info .card-title {
-  background-color: #007bc3;
-  color: #fff;
-}
-.cards .info .card-summary {
-  background-color: #007bc3;
-  color: #fff;
-}
-.cards .info .card-meta {
-  background-color: #007bc3;
-  color: #fff;
-}
-.cards .succ .card-title {
-  background-color: #008051;
-  color: #fff;
-}
-.cards .succ .card-summary {
-  background-color: #008051;
-  color: #fff;
-}
-.cards .succ .card-meta {
-  background-color: #008051;
-  color: #fff;
-}
-
-.card .card-header-img .card-title h3 {
-  font-size: 1.2em;
-  line-height: 1.2;
-  padding: 12px;
-  margin: 0;
-}
-
-.card .card-meta {
+  border-top: solid 1px rgba(0, 0, 0, 0.1);
+  border-left: solid 1px rgba(0, 0, 0, 0.1);
+  padding: .6rem;
+  padding-bottom: .5rem;
+  box-sizing: border-box;
+  font-size: 1.2rem;
+  display: inline-block;
   position: relative;
-  width: 100%;
-  height: 30px;
-  border-radius: 0 0 3px 3px;
+  white-space: nowrap;
+}
+.card .danger {
+  color: rgba(173,30,37,0.8);
+}
+.card .card-btn:active {
+  top: 3px;
+  opacity: 0.8;
 }
 
-.card .card-meta .left {
-  max-height: 1em;
-  color: #888;
-  font-size: .7em;
-  text-transform: uppercase;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0px;
-  padding: 8px 12px 12px 12px;
+/* Accennt */
+.accent-dark {
+  border-top: 2px #333333 solid;
 }
-
-.card .card-meta .right {
-  max-height: 1em;
-  color: #888;
-  font-size: .7em;
-  text-transform: uppercase;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0px;
-  padding: 8px 12px 12px 12px;
+.accent-red {
+  border-top: 2px #ad1e25 solid;
+}
+.accent-blue {
+  border-top: 2px #007bc3 solid;
+}
+.accent-orange {
+  border-top: 2px #eb7413 solid;
+}
+.accent-green {
+  border-top: 2px #008051 solid;
 }
