--- a/css/qwerty.css
+++ b/css/qwerty.css
@@ -8,7 +8,6 @@
 - Links
 - Forms
 - Lists
-- Code
 - Tables
 - Spacing
 - Utilities
@@ -21,7 +20,6 @@
 
 ** Componets **
 + Push Menu
-
 */
 
 /* Grid System
@@ -63,32 +61,35 @@
     width: 90%; }
   .col,
   .cols {
-    margin-left: 1.5%; }
+    margin-left: 1%; }
   .col:first-child,
   .cols:first-child {
     margin-left: 0; }
 
   .one.col,
-  .one.cols                    { width: 6.95833333333%; }
-  .two.cols                    { width: 15.41666666666667%; }
-  .three.cols                  { width: 23.87%;            }
-  .four.cols                   { width: 32.33%; }
-  .five.cols                   { width: 40.76666666665%; }
-  .six.cols                    { width: 49.25%;            }
-  .seven.cols                  { width: 57.70%; }
-  .eight.cols                  { width: 65.3333333333%; }
-  .nine.cols                   { width: 74.0%;          }
-  .ten.cols                    { width: 83.0834%; }
-  .eleven.cols                 { width: 91.5416667%; }
+  .one.cols                    { width: 7.41666666666667%; }
+  .two.cols                    { width: 15.83333333333334%; }
+  .three.cols                  { width: 24.25%;            }
+  .four.cols                   { width: 32.66666666666667%; }
+  .five.cols                   { width: 41.08333333333335%; }
+  .six.cols                    { width: 49.5%;            }
+  .seven.cols                  { width: 57.91666666666669%; }
+  .eight.cols                  { width: 66.33333333333336%; }
+  .nine.cols                   { width: 74.75000000000003%;          }
+  .ten.cols                    { width: 83.1666666666667%; }
+  .eleven.cols                 { width: 91.58333333333337%; }
   .twelve.cols                 { width: 100%; margin-left: 0; }
 
-  .one-third               { width: calc(100%/3); }
-  .two-thirds              { width: calc(100%/3*2); }
-  .one-half                { width: calc(100%/2); }
+  .one-third               { width: 33.33333333333333%; }
+  .two-thirds              { width: 66.66666666666666% }
+  .one-half                { width: 50%; }
 
-  .one-third.col               { width: 32.33%; }
-  .two-thirds.col              { width: 65.3333333333%; }
-  .one-half.col                { width: 49.25%; }
+  .one-third.col,
+  .one-third.cols               { width: 32.66666666666667%; }
+  .two-thirds.col,
+  .two-thirds.cols              { width: 66.33333333333334%; }
+  .one-half.col,
+  .one-half.cols                { width: 49.5%; }
 
   /* Offsets */
   .push-one.col,
@@ -136,24 +137,32 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Poppins", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Catamaran', 'Noto Sans Japanese', sans-serif;
+  letter-spacing: .05em;
   color: #222;
   background-color: #f9f9f9;
 }
-
+.row:before,
+.row:after {
+  display: table;
+  content: " ";
+}
+.row:after {
+  clear: both;
+}
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom:.4rem;
-  font-weight: 500; }
-h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
-h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
+  font-weight: 600; }
+h1 { font-size: 4.0rem; line-height: 1.2;}
+h2 { font-size: 3.6rem; line-height: 1.25;}
+h3 { font-size: 3.0rem; line-height: 1.3;}
+h4 { font-size: 2.4rem; line-height: 1.35;}
+h5 { font-size: 1.8rem; line-height: 1.5;}
+h6 { font-size: 1.5rem; line-height: 1.6;}
 
 /* Larger than phablet */
 @media (min-width: 550px) {
@@ -178,103 +187,70 @@ p {
 .fw-800 {  font-weight: 800; }
 .fw-900 {  font-weight: 900; }
 
-
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
+  color: #333;
   text-decoration: none;
 }
+
 a:hover {
   color: #666;
 }
 
+.link {
+  border-bottom: dotted 1px #ccc;
+}
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.btn,
-button,
-input[type="submit"],
-input[type="reset"],
-input[type="button"] {
+.btn{
   display: inline-block;
   position: relative;
-  color: #444;
   text-align: center;
-  font-weight: 800;
-  text-transform: uppercase;
+  font-weight: 600;
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
-  border: 2px solid #bbb;
   cursor: pointer;
   box-sizing: border-box;
-  font-size: 1.3rem;
-  line-height: 2.6rem;
-  letter-spacing: .39rem;
-  padding: 1.105rem 3.9rem .52rem 3.9rem;
-  border-radius: .52rem;
-}
-.btn:hover,
-button:hover,
-input[type="submit"]:hover,
-input[type="reset"]:hover,
-input[type="button"]:hover,
-.btn:focus,
-button:focus,
-input[type="submit"]:focus,
-input[type="reset"]:focus,
-input[type="button"]:focus {
-  outline: 0;
   border: none;
+  border-radius: 5px;
+  background-color: #fff;
+  border-top: solid 1px rgba(200, 200, 200, 0.4);
+  border-left: solid 1px rgba(200, 200, 200, 0.4);
+  border-bottom: solid 1px rgba(55, 55, 55, 0.2);
+  border-right: solid 1px rgba(55, 55, 55, 0.2);
+  color: #333;
 }
-.btn:active,
-button:active,
-input[type="submit"]:active,
-input[type="reset"]:active,
-input[type="button"]:active {
+
+.btn:hover, .btn:focus, .btn:active{
+  outline: 0;
+}
+
+.btn:active {
   top: 3px;
-  background-color: #e5e5e5;
+  background-color: #eee;
 }
-
-.btn-xl {
-font-size: 2.0rem;
-line-height: 4rem;
-letter-spacing: .6rem;
-padding: 1.7rem 6rem .8rem 6rem;
-border-radius: .8rem;
-}
-
 .btn-lg {
-font-size: 1.6rem;
-line-height: 3.2rem;
+font-size: 2.4rem;
 letter-spacing: .48rem;
-padding: 1.44rem 4.8rem .64rem 4.8rem;
-border-radius: .64rem;
+padding: 2rem 4rem 1.6rem 4rem;
 }
 
 .btn-md {
-font-size: 1.3rem;
-line-height: 2.6rem;
-letter-spacing: .39rem;
-padding: 1.105rem 3.9rem .52rem 3.9rem;
-border-radius: .52rem;
+font-size: 1.8rem;
+letter-spacing: .36rem;
+padding: 1.5rem 3rem 1.2rem 3rem;
 }
 
 .btn-sm {
-font-size: 1.0rem;
-line-height: 2rem;
-letter-spacing: .3rem;
-padding: .85rem 3rem .4rem 3rem;
-border-radius: .4rem;
+font-size: 1.4rem;
+letter-spacing: .28rem;
+padding: 1rem 2rem .8rem 2rem;
 }
 
-.btn-xs {
-font-size: .8rem;
-line-height: 1.6rem;
-letter-spacing: .24rem;
-padding: .68rem 2.4rem .32rem 2.4rem;
-border-radius: .32rem;
-}
+/* Circle Button */
 .circle-button {
   width: 40px;
 	height: 40px;
@@ -293,13 +269,13 @@ border-radius: .32rem;
 .circle-button i {
   padding-left: 12px;
   font-size: 20px;
-  line-height: 40px;
+  line-height: 46px;
   color: #fff;
   cursor: pointer;
 }
 
 .circle-button:hover {
-  background-color: #555;
+  opacity: 0.8;
   box-shadow: 0px 6px 4px rgba(0,0,0,0.2);
   transform: translateY(-4px);
   -moz-transform: translateY(-4px);
@@ -307,218 +283,18 @@ border-radius: .32rem;
 }
 
 .head .circle-button {
-  right: 30px;
-  margin-top: 10px;
+  right: 4px;
+  margin-top: -4px;
 }
 
-
-.btn.btn-dark,
-button.btn-dark,
-input[type="submit"].btn-dark,
-input[type="reset"].btn-dark,
-input[type="button"].btn-dark {
-  color: #FFF;
-  background-color: #333333;
-  box-shadow:0 3px #000000;
-  border-style: none;
+.qw-box {
+  background-color: #fff;
+  border-top: solid 1px rgba(200, 200, 200, 0.4);
+  border-left: solid 1px rgba(200, 200, 200, 0.4);
+  border-bottom: solid 1px rgba(55, 55, 55, 0.2);
+  border-right: solid 1px rgba(55, 55, 55, 0.2);
+  border-radius: 5px;
 }
-.btn.btn-dark:hover,
-button.btn-dark:hover,
-input[type="submit"].btn-dark:hover,
-input[type="reset"].btn-dark:hover,
-input[type="button"].btn-dark:hover,
-.btn.btn-dark:focus,
-button.btn-dark:focus,
-input[type="submit"].btn-dark:focus,
-input[type="reset"].btn-dark:focus,
-input[type="button"].btn-dark:focus {
-  color: #FFF;
-  background-color: #333333;
-  border-style: none;
-}
-.btn.btn-dark:active,
-button.btn-dark:active,
-input[type="submit"].btn-dark:active,
-input[type="reset"].btn-dark:active,
-input[type="button"].btn-dark:active,
-.btn.btn-dark:active,
-button.btn-dark:active,
-input[type="submit"].btn-dark:active,
-input[type="reset"].btn-dark:active,
-input[type="button"].btn-dark:active {
-  top: 3px !important;
-  box-shadow:none;
-  color: #FFF;
-  background-color: #444444;
-  border-style: none;
-}
-
-.btn.btn-red,
-button.btn-red,
-input[type="submit"].btn-red,
-input[type="reset"].btn-red,
-input[type="button"].btn-red {
-  color: #FFF;
-  background-color: #ad1e25;
-  box-shadow:0 3px #7a1e2a;
-  border-style: none;
-}
-.btn.btn-red:hover,
-button.btn-red:hover,
-input[type="submit"].btn-red:hover,
-input[type="reset"].btn-red:hover,
-input[type="button"].btn-red:hover,
-.btn.btn-red:focus,
-button.btn-red:focus,
-input[type="submit"].btn-red:focus,
-input[type="reset"].btn-red:focus,
-input[type="button"].btn-red:focus {
-  color: #FFF;
-  background-color: #ad1e25;
-  border-style: none;
-}
-.btn.btn-red:active,
-button.btn-red:active,
-input[type="submit"].btn-red:active,
-input[type="reset"].btn-red:active,
-input[type="button"].btn-red:active,
-.btn.btn-red:active,
-button.btn-red:active,
-input[type="submit"].btn-red:active,
-input[type="reset"].btn-red:active,
-input[type="button"].btn-red:active {
-  top: 3px !important;
-  box-shadow:none;
-  color: #FFF;
-  background-color: #cc000a;
-  border-style: none;
-}
-
-.btn.btn-orange,
-button.btn-orange,
-input[type="submit"].btn-orange,
-input[type="reset"].btn-orange,
-input[type="button"].btn-orange {
-  color: #FFF;
-  background-color: #eb7413;
-  box-shadow:0 3px #c8501c;
-  border-style: none;
-}
-.btn.btn-orange:hover,
-button.btn-orange:hover,
-input[type="submit"].btn-orange:hover,
-input[type="reset"].btn-orange:hover,
-input[type="button"].btn-orange:hover,
-.btn.btn-orange:focus,
-button.btn-orange:focus,
-input[type="submit"].btn-orange:focus,
-input[type="reset"].btn-orange:focus,
-input[type="button"].btn-orange:focus {
-  color: #FFF;
-  background-color: #eb7413;
-  border-style: none;
-}
-.btn.btn-orange:active,
-button.btn-orange:active,
-input[type="submit"].btn-orange:active,
-input[type="reset"].btn-orange:active,
-input[type="button"].btn-orange:active,
-.btn.btn-orange:active,
-button.btn-orange:active,
-input[type="submit"].btn-orange:active,
-input[type="reset"].btn-orange:active,
-input[type="button"].btn-orange:active {
-  top: 3px !important;
-  box-shadow:none;
-  color: #FFF;
-  background-color: #e67350;
-  border-style: none;
-}
-
-
-.btn.btn-blue,
-button.btn-blue,
-input[type="submit"].btn-blue,
-input[type="reset"].btn-blue,
-input[type="button"].btn-blue {
-  color: #FFF;
-  background-color: #007bc3;
-  box-shadow:0 3px #005180;
-  border-style: none;
-}
-.btn.btn-blue:hover,
-button.btn-blue:hover,
-input[type="submit"].btn-blue:hover,
-input[type="reset"].btn-blue:hover,
-input[type="button"].btn-blue:hover,
-.btn.btn-blue:focus,
-button.btn-blue:focus,
-input[type="submit"].btn-blue:focus,
-input[type="reset"].btn-blue:focus,
-input[type="button"].btn-blue:focus {
-  color: #FFF;
-  background-color: #007bc3;
-  border-style: none;
-}
-.btn.btn-blue:active,
-button.btn-blue:active,
-input[type="submit"].btn-blue:active,
-input[type="reset"].btn-blue:active,
-input[type="button"].btn-blue:active,
-.btn.btn-blue:active,
-button.btn-blue:active,
-input[type="submit"].btn-blue:active,
-input[type="reset"].btn-blue:active,
-input[type="button"].btn-blue:active {
-  top: 3px !important;
-  box-shadow:none;
-  color: #FFF;
-  background-color: #0091e6;
-  border-style: none;
-}
-
-
-.btn.btn-green,
-button.btn-green,
-input[type="submit"].btn-green,
-input[type="reset"].btn-green,
-input[type="button"].btn-green {
-  color: #FFF;
-  background-color: #008051;
-  box-shadow:0 3px #2c523c;
-  border-style: none;
-}
-.btn.btn-green:hover,
-button.btn-green:hover,
-input[type="submit"].btn-green:hover,
-input[type="reset"].btn-green:hover,
-input[type="button"].btn-green:hover,
-.btn.btn-green:focus,
-button.btn-green:focus,
-input[type="submit"].btn-green:focus,
-input[type="reset"].btn-green:focus,
-input[type="button"].btn-green:focus {
-  color: #FFF;
-  background-color: #008051;
-  border-style: none;
-}
-.btn.btn-green:active,
-button.btn-green:active,
-input[type="submit"].btn-green:active,
-input[type="reset"].btn-green:active,
-input[type="button"].btn-green:active,
-.btn.btn-green:active,
-button.btn-green:active,
-input[type="submit"].btn-green:active,
-input[type="reset"].btn-green:active,
-input[type="button"].btn-green:active {
-  top: 3px !important;
-  box-shadow:none;
-  color: #FFF;
-  background-color: #28a371;
-  border-style: none;
-}
-
 
 /* Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -690,96 +466,52 @@ ol ul {
   margin: 1.5rem 0 1.5rem 3rem;
   font-size: 90%; }
 li {
-  margin-bottom: 1rem; }
-
-
-/* Code
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-code {
-  padding: .2rem .5rem;
-  margin: 0 .2rem;
-  font-size: 90%;
-  white-space: nowrap;
-  background: #F1F1F1;
-  border: 1px solid #E1E1E1;
-  border-radius: 4px; }
-pre > code {
-  display: block;
-  padding: 1rem 1.5rem;
-  white-space: pre; }
-
+  margin: 0; }
 
 /* Tables
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 th,
 td {
-  padding: 12px 15px;
+  padding: 8px 15px;
   text-align: left;
   border-bottom: 1px solid #E1E1E1; }
 th:first-child,
 td:first-child {
-  padding-left: 0; }
+  padding-left: 12px; }
 th:last-child,
 td:last-child {
-  padding-right: 0; }
-
+  padding-right: 12px; }
+tr:nth-child(2n) {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+tr:hover {
+background-color: rgba(0, 0, 0, 0.1);
+}
+thead tr:hover {
+background-color: rgba(0, 0, 0, 0);
+}
 
 /* Spacing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-button,
-.btn {
-  margin: .5rem 0; }
-input,
-textarea,
-select,
-fieldset {
-  margin: .5rem 0; }
-pre,
-blockquote,
-dl,
-figure,
-table,
-p,
-ul,
-ol,
-form {
-  margin-bottom: 0; }
 
-div.spacer-xl {
-  width: 100%;
-  height: 5em;
-}
-div.spacer-lg {
-  width: 100%;
-  height: 80px;
-  height: 4em;
-}
-div.spacer-md {
-  width: 100%;
-  height: 60px;
-  height: 3em;
-}
-div.spacer-sm {
-  width: 100%;
-  height: 40px;
-  height: 2em;
-}
-div.spacer-xs {
-  width: 100%;
-  height: 20px;
-  height: 1em;
-}
-
+div.spacer-10 { width: 100%; height: 10em;}
+div.spacer-9 { width: 100%; height: 9em;}
+div.spacer-8 { width: 100%; height: 8em;}
+div.spacer-7 { width: 100%; height: 7em;}
+div.spacer-6 { width: 100%; height: 6em;}
+div.spacer-5 { width: 100%; height: 5em;}
+div.spacer-4 { width: 100%; height: 4em;}
+div.spacer-3 { width: 100%; height: 3em;}
+div.spacer-2 { width: 100%; height: 2em;}
+div.spacer-1 { width: 100%; height: 1em;}
 
 /* Utilities
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .qw-fullwidth {
   width: 100%;
   box-sizing: border-box; }
-.qw-float-right {
-  float: right; }
-.qw-float-left {
-  float: left; }
+.qw-float-right { float: right; }
+.qw-float-left { float: left; }
 
 
 /* Misc
@@ -852,6 +584,11 @@ there.
   color: #f5f5f5;
 }
 
+.fill-red {
+  background-color: rgba(173,30,37,1);
+  color: #f5f5f5;
+}
+
 .fill-smoke {
   background-color: #f5f5f5;
   color: #000000;
@@ -859,6 +596,15 @@ there.
 
 /* Visiblity
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
 
 /* Larger than Desktop HD */
 @media (min-width: 1440px) {
@@ -1154,7 +900,7 @@ nav ul{
   width: 100%;
   height: 60px;
   background-color: #fff;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+  border-bottom: solid 1px rgba(55, 55, 55, 0.2);
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
@@ -1285,20 +1031,23 @@ nav ul{
 .card {
   background-color: #fff;
   border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, 0.15) 1px 1px 2px 0, rgba(0, 0, 0, 0.15) 0 0 6px 0;
+  border-top: solid 1px rgba(200, 200, 200, 0.4);
+  border-left: solid 1px rgba(200, 200, 200, 0.4);
+  border-bottom: solid 1px rgba(55, 55, 55, 0.2);
+  border-right: solid 1px rgba(55, 55, 55, 0.2);
   overflow: hidden;
-  margin-bottom: 1.5%;
+  margin-bottom: 1%;
 }
-
+.card .head{
+  font-weight: bold;
+  position: relative;
+}
 @media (max-width: 550px) {
   .card {
     margin-bottom: 3%;
   }
 }
 
-.card-red {
-  border-top: dashed 1px rgba(173,30,37,0.6);
-}
 .card-red .head {
   background-color: rgba(173,30,37,0.3);
   color: rgba(173,30,37,0.8);
@@ -1320,8 +1069,9 @@ nav ul{
 }
 .card .image-head {
   background-color: #999;
-  height: 200px;
+  height: 180px;
   background-size: cover;
+  position: relative;
 }
 .card .head .title {
   display: inline;
@@ -1329,7 +1079,7 @@ nav ul{
 .card .image-head .title {
   position: absolute;
   padding: 8px;
-  bottom: 45px;
+  bottom: 0px;
   color: #fff;
 }
 .card .body {
@@ -1352,6 +1102,9 @@ nav ul{
   display: inline-block;
   position: relative;
   white-space: nowrap;
+}
+.card .card-btn:first-child {
+  border-left: solid 0px rgba(0, 0, 0, 0.1);
 }
 .card .danger {
   color: rgba(173,30,37,0.8);
